--- a/animations.css
+++ b/animations.css
@@ -9,3 +9,11 @@
 }
 
 /*  esercizio 2 */
+.ex-2-square {
+    transition: all 3s;
+}
+
+.ex-2-square:active {
+    transition: all 3s;
+    width: 100%;
+}
