--- a/animations.css
+++ b/animations.css
@@ -17,3 +17,12 @@
     transition: all 3s;
     width: 100%;
 }
+
+/*  esercizio 3 */
+.ex-3-square {
+    transition: all 1s;
+}
+
+.ex-3-square:hover {
+    border-radius: 50%;
+}
