--- a/animations.css
+++ b/animations.css
@@ -26,3 +26,12 @@
 .ex-3-square:hover {
     border-radius: 50%;
 }
+
+/*  esercizio 4 */
+.ex-4-square {
+    transition: all 1s;
+}
+
+.ex-4-square:hover {
+    background-color: white;
+}
