--- a/animations.css
+++ b/animations.css
@@ -35,3 +35,21 @@
 .ex-4-square:hover {
     background-color: white;
 }
+
+/*  esercizio 5 */
+.ex-5-square {
+    transition: all 1s;
+
+}
+
+.ex-5-square:hover {
+    width: 100px;
+    height: 100px;
+    margin: 0;
+}
+
+.ex-5-square:active {
+   height: 20px;
+   width: 20px;
+   margin: 40px;
+}
