--- a/animations.css
+++ b/animations.css
@@ -53,3 +53,14 @@
    width: 20px;
    margin: 40px;
 }
+
+/*  esercizio 6 */
+.ex-6-img {
+    transition: all 1s;
+
+}
+
+.ex-6-img:hover {
+    filter: grayscale(1);
+}
+
