--- a/animations.css
+++ b/animations.css
@@ -43,15 +43,11 @@
 }
 
 .ex-5-square:hover {
-    width: 100px;
-    height: 100px;
-    margin: 0;
+    transform: scale(1.9);
 }
 
 .ex-5-square:active {
-   height: 20px;
-   width: 20px;
-   margin: 40px;
+    transform: scale(0.5);
 }
 
 /*  esercizio 6 */
@@ -81,6 +77,21 @@
 }
 
 .ex-8-img:hover {
+    border-radius: 25px;
+}
+
+/*  esercizio 9 */
+
+.ex-9-img { 
+    transition: all 1s;
+}
+
+.ex-9-img:hover { 
+    filter: grayscale(0.5) sepia(0.5);
+}
+
+.ex-9-img:hover {
+    transform: scale(1.5);
     border-radius: 25px;
 }
 
