--- a/animations.css
+++ b/animations.css
@@ -98,44 +98,36 @@
 /*  esercizio 10 */
 .ex-10-icon {
     animation-name: rotation;
-    animation-duration: 3s;
+    animation-duration: 0.5s;
     animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
 @keyframes rotation {
-    0%{
+    0% {
         transform: rotate(0deg);
     }
-    10%{
-        transform: rotate(-36deg);
+    100% {
+        transform: rotate(-1turn);
     }
-    20%{
-        transform: rotate(-72deg);
-    }
-    30%{
-        transform: rotate(-108deg);
-    }
-    40%{
-        transform: rotate(-144deg);
-    }
-    50%{
-        transform: rotate(-180deg);
-    }
-    60%{
-        transform: rotate(-216deg);
-    }
-    70%{
-        transform: rotate(-252deg);
-    }
-    80%{
-        transform: rotate(-288deg);
-    }
-    90%{
-        transform: rotate(-324deg);
-    }
-    100%{
-        transform: rotate(-360deg);
-    }
-    
+}
 
+/* esercizio 11 */
+
+.ex-11-icon:hover {
+    animation-name: rotatate-2;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
+
+@keyframes rotatate-2 {
+    0% { 
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(.85turn);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
 }
