--- a/animations.css
+++ b/animations.css
@@ -131,3 +131,48 @@
         transform: rotate(0deg);
     }
 }
+
+.ex-12-top-white {
+    animation-name: top-destra-12;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes top-destra-12 {
+    0% {
+        top: -10px;
+        left: 10%;
+    }
+    50% {
+        top: -10px;
+        left: 70%;
+    }
+    100% {
+        top: -10px;
+        left: 10%;
+    }
+}
+.ex-12-bottom-white {
+    animation-name: top-sinistra-12;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes top-sinistra-12 {
+    0% {
+        bottom: -10px;
+        right: 10%;
+    }
+    50% {
+        bottom: -10px;
+        right: 70%;
+    }
+    100% {
+        bottom: -10px;
+        right: 10%;
+    }
+}
+
+/* esercizio 13 */
